--- a/MassAutoGarage/Views/HRMS_Bonus/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_Bonus/Index.cshtml
@@ -217,7 +217,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model)
+                            @*@foreach (var item in Model)
                             {
                                 <tr>
                                     <td data-th="Srl.No.">@i</td>
@@ -241,7 +241,7 @@
                                     </td>
                                 </tr>
                                 i++;
-                            }
+                            }*@
                         </tbody>
                     </table>
                 </div>
