--- a/MassAutoGarage/Views/HRMS_Loan/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_Loan/Index.cshtml
@@ -222,7 +222,7 @@
                         </thead>
                         <tbody>
 
-                            @foreach (var item in Model)
+                            @*@foreach (var item in Model)
                             {
                                 <tr>
                                     <td data-th="Srl.No.">@i</td>
@@ -250,7 +250,7 @@
                                     </td>
                                 </tr>
                                 i++;
-                            }
+                            }*@
 
                         </tbody>
                     </table>
