--- a/MassAutoGarage/Views/ColorMaster/CreateColor.cshtml
+++ b/MassAutoGarage/Views/ColorMaster/CreateColor.cshtml
@@ -59,7 +59,7 @@
                             <div class="col-xxl-3 col-md-6">
                                 <div>
                                     <label for="labelInput" class="form-label">Color Name <code>*</code></label>
-                                    @Html.DropDownListFor(x => x.ColorId, new SelectList(ViewBag.Colorlist, "ID", "ColorName"), "--Select Color Name--", new { @class = "form-control", tabindex = 2 })
+                                    @Html.DropDownListFor(x => x.ColorId, new SelectList(ViewBag.Colorlist, "ID", "ColorName"), "--Select Color Name--", new { @class = "js-example-basic-single", tabindex = 2 })
                                     @Html.HiddenFor(m => m.ColorCode, new { @class = "form-control", })
                                 </div>
                             </div>
