--- a/MassAutoGarage/Views/HRMS_EmployeeBankDetails/Index.cshtml
+++ b/MassAutoGarage/Views/HRMS_EmployeeBankDetails/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MassAutoGarage.Models.AddOnsMaster.AddOnsMasterModel>
+﻿@model List<MassAutoGarage.Models.HRMS_EmployeeBankDetails.HRMSEmployeeBankDetailsModel>
 
 @{
     ViewBag.Title = "Employee Bank Details";
@@ -31,7 +31,7 @@
 </style>
 
 <style>
-
+   
     .main-table {
         width: 100%;
         /*  max-width: 980px;*/
@@ -178,21 +178,13 @@
 
             <div class="card-header main-f">
                 <div class="row">
-                    <div class="col-md-6 col-5"> <h5 class="card-title mb-0 gp-detail">EMPLOYEE BANK DETAILS</h5></div>
-                    <div class="col-md-6 col-7">
+                    <div class="col-md-4 col-4"> <h5 class="card-title mb-0 gp-detail">EMPLOYEE BANK DETAILS</h5></div>
+                    <div class="col-md-4 col-4"><span style="color:#e51515"><b>@TempData["msg"]</b></span></div>
+                    <div class="col-md-4 col-4">
                         <a href="@Url.Action("EmployeeBankDetails","HRMS_EmployeeBankDetails")" class="btn btn-primary add-new" style="float:right;" tabindex="1"> <i class="ri-add-circle-line align-middle me-1"></i>ADD EMPLOYEE BANK DETAILS</a>
                     </div>
                 </div>
             </div>
-
-            @*<div class="card-header">
-            <h5 class="card-title mb-0">EMPLOYEE BANK DETAILS</h5>
-            <a href="@Url.Action("EmployeeBankDetails","HRMS_EmployeeBankDetails")" class="btn btn-primary" style="float:right;" tabindex="1"><i class="ri-add-circle-line align-middle me-1"></i>ADD EMPLOYEE BANK DETAILS</a>
-        </div>*@
-
-
-
-
             <div class="card-body">
                 <div class="col-lg-12">
                     <div class="live-preview">
@@ -212,41 +204,52 @@
                 </div>
 
                 <div class="table-responsive">
-
                     <table border="1" id="example" class="display table table-bordered" style="width:100%">
                         <thead>
                             <tr>
                                 <th style=" width: 1%;">S.N.</th>
                                 <th style="white-space: nowrap">Branch</th>
-                                <th style="white-space: nowrap">Employee Name</th>
-                                <th style="white-space: nowrap">Bank Name</th>
                                 <th style="white-space: nowrap">Account Number</th>
+                                <th style="white-space: nowrap">Employee Name</th>
                                 <th style="white-space: nowrap">IBAN CODE</th>
                                 <th style="white-space: nowrap">Bank Name</th>
                                 <th style="white-space: nowrap">Bank Branch</th>
                                 <th style="white-space: nowrap">Status</th>
-                                <th style=" width: 15%;">Action</th>
-
+                                <th style=" width: 50% !important;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                        </tbody>
-                    </table>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td data-th="Srl.No.">@i</td>
+                                    <td data-th="Srl.No.">@item.BranchName</td>
+                                    <td data-th="Code">@item.AccountNumber</td>
+                                    <td data-th="Code">@item.EmployeeName</td>
+                                    <td data-th="Code">@item.IBANCODE</td>
+                                    <td data-th="Code">@item.BankName</td>
+                                    <td data-th="Code">@item.BankBranch</td>
+                                    <td data-th="Code">@item.Status</td>
+                                    <td data-th="Action">
 
-                    <table id="CompanyGroup" class="table pure-table" style="width: 100%; display: none;" cellspacing="0" cellpadding="0">
-                        <thead>
-                            <tr>
-                                <th colspan="5">
-                                    <img src="@ViewBag.compnylgo" alt="" style="width: 213px; border-radius: 7px;">
-                                    <span style=" float: right;"> <b>Address  :-</b> @ViewBag.compnyAddress</span>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th style=" width: 1%;">Srl.No</th>
-                                <th style="white-space: nowrap">Sales Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
+                                        <div class="d-flex gap-2">
+                                            <div class="edit">
+
+                                                <a href="/HRMS_EmployeeBankDetails/EmployeeBankDetails?Id=@item.IdEncrypte" class="btn btn-sm btn-success edit-item-btn" tabindex="6">Edit <i class="fa fa-edit"></i></a>
+                                            </div>
+                                            <div class="remove">
+
+                                                <a href="/HRMS_EmployeeBankDetails/DeleteEmployeeBankDetails?Id=@item.IdEncrypte" onclick="return confirm('Are you sure you want to delete ?')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>
+
+
+                                                @*<a href="javascript:void(0)" onclick="return DeleteEmployeeBankDetails('@item.IdEncrypte')" class="btn btn-sm btn-danger remove-item-btn">Delete <i class="fa fa-trash" aria-hidden="true"></i></a>*@
+
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                i++;
+                            }
                         </tbody>
                     </table>
                 </div>
@@ -290,59 +293,9 @@
                     queryString[key] = value;
                 }
             }
-
             $('#txtsearch').val(queryString[key]);
         }
-
-
-
     });
-
-    function ConfirmDelete(GrdId) {
-        debugger;
-        var x = confirm("Are you sure you want to delete?");
-        if (x)
-
-            if (GrdId > 0) {
-                $.ajax({
-                    url: '/AddOnsMaster/DeleteAddONS',
-                    type: "GET",
-                    dataType: "json",
-                    data: { AddONSID: GrdId },
-                    success: function (result) {
-                        if (result == "3") {
-
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Deleted",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-
-                                    window.location.reload();
-                                } else {
-
-                                }
-                            });
-
-                        } else {
-
-                            swal("Warning", "Records not Deleted", "warning");
-                        }
-
-                    },
-                    error: function (xhr, status) {
-                        console.log(status);
-                        console.log(xhr);
-                    },
-                    complete: function () {
-
-                    }
-                });
-            }
-            else
-                return false;
-    }
 
     $('#txtsearch').change(function () {
 
@@ -353,76 +306,8 @@
         debugger;
 
         var SearchKey = $('#txtsearch').val();
-        var url = "/AddOnsMaster/OnsDetails?Key=" + SearchKey;
+        var url = "/HRMS_EmployeeBankDetails/Index?Key=" + SearchKey;
         window.location.href = url;
     }
-    function generate() {
-        var doc = new jspdf.jsPDF()
-
-        // Simple data example
-        //var head = [['ID', 'Country', 'Rank', 'Capital']]
-        //var body = [
-        //    [1, 'Denmark', 7.526, 'Copenhagen'],
-        //    [2, 'Switzerland', 7.509, 'Bern'],
-        //    [3, 'Iceland', 7.501, 'Reykjavík'],
-        //]
-        //doc.autoTable({ head: head, body: body })
-
-        // Simple html example
-        doc.autoTable({ html: '#CompanyGroup' })
-
-        doc.save('Nationality.pdf')
-    }
-
-    $(function () {
-
-        //var tble = document.getElementById('CompanyGroup');
-        //var row = tble.rows;
-        //var i = 6;
-        //for (var j = 0; j < row.length; j++) {
-
-
-        //    row[j].deleteCell(i);
-        //}
-
-
-
-        var table = $('#example').DataTable();
-        $("#btnExport").click(function (e) {
-            debugger;
-
-            // Getting the table
-
-
-            table.page.len(-1).draw();
-            window.open('data:application/vnd.ms-excel,' +
-                encodeURIComponent($('#example').parent().html()));
-            setTimeout(function () {
-                table.page.len(10).draw();
-            }, 1000)
-
-        });
-    });
 </script>
-<script type="text/javascript">
-    $("body").on("click", "#btnPdf", function () {
-        debugger;
 
-        $('#CompanyGroup').css("display", "inline-table");
-
-        html2canvas($('#CompanyGroup')[0], {
-            onrendered: function (canvas) {
-                var data = canvas.toDataURL();
-                var docDefinition = {
-                    content: [{
-                        image: data,
-                        width: 500
-                    }]
-                };
-                pdfMake.createPdf(docDefinition).download("AddONSDetails.pdf");
-                $('#CompanyGroup').css("display", "none");
-            }
-        });
-    });
-
-</script>
