--- a/MassAutoGarage/Views/HRMS_InternalRequest/InternalRequest.cshtml
+++ b/MassAutoGarage/Views/HRMS_InternalRequest/InternalRequest.cshtml
@@ -1,4 +1,5 @@
-﻿@model MassAutoGarage.Models.CompanyMasterModel
+﻿@model MassAutoGarage.Models.HRMS_InternalRequest.HRMSInternalRequestModel
+
 @{
     ViewBag.Title = "Internal Request";
     ViewBag.pTitle = "Internal Request";
@@ -6,18 +7,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-
-
 <!-- New Dive-->
 <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
 @section styles{
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
-
-
-
 }
 
 @using (Html.BeginForm("InternalRequest", "HRMS_InternalRequest", FormMethod.Post, new { enctype = "multipart/form-data", OnSubmit = "return ValidationForm()", @class = "form-validate" }))
@@ -25,8 +19,6 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
-
-
 
                 <div class="card-header main-f">
                     <div class="row">
@@ -37,16 +29,6 @@
                     </div>
                 </div>
 
-                @*<div class="card-header align-items-center d-flex">
-                    <h4 class="card-title mb-0 flex-grow-1">HRMS - INTERNAL REQUEST </h4>
-                    <div class="flex-shrink-0">
-                        <div class="form-check form-switch form-switch-right form-switch-md">
-                            <a href="@Url.Action("Index", "HRMS_InternalRequest")" class="btn btn-primary" style="float:right;" tabindex="12"><i class="fa fa-list" aria-hidden="true"></i> BACK TO INTERNAL REQUEST LIST</a>
-                        </div>
-                    </div>
-                </div>*@
-
-
                 <!-- end card header -->
                 <div class="card-body">
                     <div class="live-preview">
@@ -55,70 +37,84 @@
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Company Name<code>*</code></label>
-                                    <select id="ddlDepartment" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
-                                    </select>
+                                    @Html.HiddenFor(m => m.ID, new { @class = "form-control" })
+                                    @Html.DropDownListFor(x => x.CompanyId, new SelectList(ViewBag.CompanyList, "Id", "CompanyName"), "- Select Company Name -", new { @class = "form-control", tabindex = 1 })
+                                    @Html.ValidationMessageFor(m => m.CompanyId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Voucher No<code>*</code></label>
-                                    <input type="text" class="form-control" />
+                                    @Html.TextBoxFor(m => m.VoucherNo, new { @class = "form-control", tabindex = 2 })
+                                    @Html.ValidationMessageFor(m => m.VoucherNo, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Employee Name<code>*</code></label>
-                                    <select id="ddlEmpName" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
-                                    </select>
+                                    @Html.DropDownListFor(x => x.EmployeeId, new SelectList(ViewBag.EmployeeList, "Id", "EmployeeName"), "- Select Employee Name -", new { @class = "form-control", tabindex = 3 })
+                                    @Html.ValidationMessageFor(m => m.EmployeeId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Department<code>*</code></label>
-                                    <select id="ddlDepartment" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
-                                    </select>
+                                    @Html.DropDownListFor(x => x.DepartmentId, new SelectList(ViewBag.DepartmentList, "Id", "DepartmentName"), "- Select Department Name -", new { @class = "form-control", tabindex = 4 })
+                                    @Html.ValidationMessageFor(m => m.DepartmentId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
                             <div class="col-xxl-6 col-md-6">
                                 <div>
                                     <label for="basiInput" class="form-label">Request For <code>*</code></label>
-                                    <textarea type="text" class="form-control"></textarea>
+                                    @Html.TextAreaFor(m => m.RequestFor, new { @class = "form-control", tabindex = 5 })
+                                    @Html.ValidationMessageFor(m => m.RequestFor, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
                             <div class="col-xxl-6 col-md-6">
                                 <div>
+
+                                    <input type="hidden" id="hdfPurpose" value="@Model.Purpose" />
                                     <label for="basiInput" class="form-label">Purpose<code>*</code></label>
-                                    <select id="ddlPurpose" class="form-select" aria-label="Default select example">
-                                        <option value="0">Select </option>
+                                    <select id="Purpose" name="Purpose" class="form-select" aria-label="Default select example" tabindex=6>
+                                        <option value="0">Select</option>
+                                        <option Value="Purchase Order Approval">Purchase Order Approval</option>
+                                        <option Value="Offer Letter Approval in HRM">Offer Letter Approval in HRM</option>
+                                        <option Value="Payment Voucher Approval">Payment Voucher Approval</option>
+                                        <option Value="Quotation Approval">Quotation Approval</option>
+                                        <option Value="Invoice Approval">Invoice Approval</option>
+                                        <option Value="Journal Voucher Approval">Journal Voucher Approval</option>
+                                        <option Value="Salary slip Approval">Salary slip Approval</option>
+                                        <option Value="Loan / Advance Approval">Loan / Advance Approval</option>
+                                        <option Value="Leave Approval">Leave Approval</option>
+                                        <option Value="Discount Approval">Discount Approval</option>
+                                        <option Value="Enquiry Approval">Enquiry Approval</option>
+                                        <option Value="Over Time / Bonus Approval">Over Time / Bonus Approval</option>
+                                        <option Value="Others">Others</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-xxl-12 col-md-12">
                                 <div>
                                     <label for="basiInput" class="form-label">
-                                        Remarks<code>*</code>
+                                        Remarks<code></code>
                                     </label>
-                                    <textarea type="text" class="form-control"></textarea>
-                                </div>
-                            </div>
-
-
-                            <!--end col-->
-                            <div class="col-xxl-12 col-md-12">
-                                <div class="table-responsive">
-
+                                    @Html.TextAreaFor(m => m.Remarks, new { @class = "form-control", tabindex = 7 })
+                                    @Html.ValidationMessageFor(m => m.Remarks, null, new { @class = "field-validation-error", data_valmsg_for = "ShortName" })
                                 </div>
                             </div>
 
                             <div class="col-xxl-12 col-md-12">
                                 <div class="form-floating" style="float:right;">
-                                    <input type="button" id="btnsave" value="Save" class="btn btn-success" style=" margin-top: 8%;" />
-                                    <input type="button" id="btnReset" value="Reset" class="btn btn-danger" style=" margin-top: 8%;" />
-
-
+                                    @if (Model.ID == null || Model.ID == "")
+                                    {
+                                        <input type="button" id="btnsave" value="Save" class="btn btn-success" style=" margin-top: 8%;" />
+                                        <input type="button" id="btnReset" value="Reset" class="btn btn-danger" style=" margin-top: 8%;" onclick="return Reset();" />
+                                    }
+                                    else
+                                    {
+                                        <input type="button" id="btnsave" value="Update" class="btn btn-success" style=" margin-top: 8%;" />
+                                        <input type="button" id="btnReset" value="Reset" class="btn btn-danger" style=" margin-top: 8%;" onclick="return Reset();" />
+                                    }
                                 </div>
 
                             </div>
@@ -133,155 +129,67 @@
     </div>
 
 }
+
 <!--end col-->
-
-
-
 @section scripts{
     <!-- prismjs plugin -->
     <script src="~/assets/libs/prismjs/prism.js"></script>
     <!-- App js -->
     <script src="~/assets/js/app.js"></script>
-
 }
 
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>*@
-
-@*<script src="~/Content/js/jquery.min.js"></script>*@
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="https://unpkg.com/sweetalert2@7.8.2/dist/sweetalert2.all.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.css" rel="stylesheet" />
 
-@*<script src="~/Content/js/jquery.min.js"></script>*@
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<script src="~/MyApp/HRMS_InternalRequest.js"></script>
 
 <script>
+
+    if ($("#hdfPurpose").val() != 0) {
+        $("#Purpose").val($("#hdfPurpose").val())
+    }
+
     $(document).ready(function () {
-
-
-
+        vouchernew();
     });
 
-
-    $("#btnSave").click(function (e) {
+    function vouchernew() {
         debugger;
-        e.preventDefault();
-
-        var _code = $("#Code").val();
-        var _GroupID = $("#GroupID option:selected").val();
-        var _CompanyName = $("#CompanyName").val();
-        var _TRN = $("#TRN").val();
-        var _LocationMapUrl = $("#LocationMapUrl").val();
-        var _Email = $("#Email").val();
-        var _Address = $("#Address").val();
-        var _companyId = $("#HDFID").val();
-        var _CurrentCount = $("#HDFCurrentCount").val();
-        var _IsActive = $("#IsActive option:selected").val();
-
-        if (_code != "" && _GroupID != "" && _CompanyName != "" && _TRN != "" && _Email != "" && _Address != "") {
-
-            var ProductListArr = [];
-            var ProductList = {
-                Id: _companyId,
-                CurrentCount: _CurrentCount,
-                Code: _code,
-                GroupID: _GroupID,
-                CompanyName: _CompanyName,
-                Address: _Address,
-                TRN: _TRN,
-                Email: _Email,
-                LocationMapUrl: _LocationMapUrl,
-                IsActive: _IsActive
-
-            };
-            //ProductListArr.push(ProductList);
-
-            if (confirm("Are you sure you want to continue ?")) {
-                $.ajax({
-                    type: 'POST',
-                    url: '/CompanyMaster/SaveCompanyMaster',
-                    data: JSON.stringify(ProductList),
-                    contentType: "application/json; charset=utf-8",
-                    dataType: 'json',
-                    success: function (data) {
-                        debugger;
-                        if (data == "1") {
-                            debugger;
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Saved",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
-
-                                }
-                            });
-
-                        }
-                        else if (data == "2") {
-
-                            swal({
-                                title: "Success",
-                                text: "Records Successfully Updated",
-                                type: "success",
-                            }).then(function (isConfirm) {
-                                if (isConfirm) {
-                                    var url = "/CompanyMaster/Index";
-                                    window.location.href = url;
-                                } else {
-
-                                }
-                            });
-                        }
-                        else if (data == "4") {
-                            swal("Warning", "This Code is Already Exist !", "warning");
-                        } else {
-
-                            swal("Warning", "Record not save!", "warning");
-                        }
-
-                    },
-                    error: function (httpResponse) {
-
-                        swal("Warning", "Something Went to Wrong!", "warning");
-
-                    }
+        $.ajax({
+            type: 'POST',
+            url: '/HRMS_InternalRequest/GetMaxVoucher',
+            data: "{}",
+            dataType: "json",
+            success: function (result) {
+                $.each(result, function (i, v) {
+                    var i = 'IRV-' + v.MaxID;
+                    $("#VoucherNo").val(i);
                 })
             }
-        }
-        else {
+        })
+    }
 
-            if (_code == "") {
-                swal("Warning", "Please Enter Code !", "warning");
-                return false;
-            }
-            if (_GroupID == "") {
-                swal("Warning", "Please Select Group Name!", "warning");
-                return false;
-            }
-            if (_CompanyName == "") {
-                swal("Warning", "Please Enter Company Name!", "warning");
-                return false;
-            }
-            if (_TRN == "") {
-                swal("Warning", "Please Enter TRN !", "warning");
-                return false;
-            }
 
-            if (_Email == "") {
-                swal("Warning", "Please Enter Email Address!", "warning");
-                $("#Email").val('');
-                return false;
-            }
-            if (_Address == "") {
-                swal("Warning", "Please Enter Address!", "warning");
-                return false;
-            }
-        }
+    //function calculatemaxid() {
 
-    })
+    //    var i = parseInt(1);
+    //    var vocherno = parseInt($("#VoucherNo").val());
+
+    //    var newvoucher = vocherno + i;
+    //    $("#VoucherNo").val(newvoucher);
+    //}
+
+
+
+
+
+
 
 
 </script>
